step_2/service.yml
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
  namespace: ##NAMESPACE##
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
  type: ##TYPE##
